# analise-empirica

./: README.md  algorithm_analysis.py  app.py  config.h  confront_sorts.py  confront_sorts_log_scale.py  empirical.ipynb  heap_sort  heap_sort.c  insertion_sort  insertion_sort.c  instalador.sh  merge_sort  merge_sort.c  methodology-outlines.md  pyproject.toml  quick_sort  quick_sort.c  run_app.sh  sample_generator  sample_generator.c  selection_sort  selection_sort.c
analysis/heap_sort_analysis/: heap_sort_statistics_summary.csv
analysis/merge_sort_analysis/: merge_sort_statistics_summary.csv
app/: app.py  insertion_sort_statistics_summary.csv  quick_sort_statistics_summary.csv  selection_sort_statistics_summary.csv
legacy/: empirical.ipynb
metrics/: heap_sort_metrics.csv  insertion_sort_metrics.csv  merge_sort_metrics.csv  quick_sort_metrics.csv  selection_sort_metrics.csv
